fix: counts number not showing

--- a/themes/al-munir/styles/index.scss
+++ b/themes/al-munir/styles/index.scss
@@ -111,6 +111,9 @@
 --------------------------------------------------------------*/
 :root {
   scroll-behavior: smooth;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   --bs-body-font-family: 'Noto Serif Bengali', serif, 'Amiri',
   serif, 'Nunito', sans-serif !important;
   --bs-font-sans-serif: 'Noto Serif Bengali', serif, 'Amiri',
@@ -120,7 +123,14 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   color: #444444;
+  width: 100vw;
+}
+
+.__next {
+  width: 100%;
 }
 
 .mi {
